--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.8",
     "axios": "^1.13.2",
     "expo": "~54.0.31",
+    "expo-av": "~16.0.8",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.10",
     "expo-linking": "~8.0.11",
